[gd_scene load_steps=6 format=3 uid="uid://dnxbsvukyu6a2"]

[ext_resource type="Script" path="res://Test/Scripts/Main.gd" id="1_ubnh2"]
[ext_resource type="Texture2D" uid="uid://x47witrev3aa" path="res://Test/Assets/background02.png" id="2_ea4bc"]
[ext_resource type="Script" path="res://Test/Scripts/CharacterAsset.gd" id="2_jy7h5"]
[ext_resource type="Script" path="res://Test/Scripts/text_box.gd" id="3_tgoc7"]
[ext_resource type="PackedScene" uid="uid://cffd4esx3hj6g" path="res://Test/Objects/choice_panel.tscn" id="4_wcimc"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ubnh2")

[node name="Background" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ea4bc")
expand_mode = 1
stretch_mode = 6

[node name="CharacterAssetContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Asset" type="TextureRect" parent="CharacterAssetContainer"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 56.0
offset_top = 44.0
offset_right = -41.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5
script = ExtResource("2_jy7h5")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.661
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.450012
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_right = 25

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 150

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 3
scroll_deadzone = 10

[node name="Container" type="VBoxContainer" parent="MarginContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 25
alignment = 2

[node name="TextBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer/ScrollContainer/Container"]
layout_mode = 2
theme_override_constants/separation = 50
script = ExtResource("3_tgoc7")

[node name="ChoicePanel" parent="MarginContainer/MarginContainer/ScrollContainer/Container" instance=ExtResource("4_wcimc")]
visible = false
texture_filter = 1
layout_mode = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -9.0

[connection signal="end" from="." to="." method="_on_end"]
